tests/toylang/pos/000042_cdrc2.toylang
program a = { a = a == 0; } .
