tests/toylang/neg/001351_mutation.toylang
program a = { var a : bool :; } .
